SI4/S7/Anciennes matières (ne font plus partie de la maquette)/Compilation/TD/TD5/Skeleton/syntax.output
State 60 conflicts: 1 shift/reduce


Grammar

    0 $accept: session $end

    1 session: stmts

    2 stmts: stmts stmt
    3      | %empty

    4 stmt: ';'
    5     | expr ';'
    6     | KPRINT expr ';'
    7     | KREAD var ';'
    8     | var '=' expr ';'
    9     | '{' stmt_list '}'
   10     | KIF '(' expr ')' stmt
   11     | KIF '(' expr ')' stmt KELSE stmt
   12     | KWHILE '(' expr ')' stmt

   13 stmt_list: stmt
   14          | stmt_list stmt

   15 expr: NUMBER
   16     | var
   17     | '-' expr
   18     | expr '+' expr
   19     | expr '-' expr
   20     | expr '*' expr
   21     | expr '/' expr
   22     | expr '<' expr
   23     | expr '>' expr
   24     | expr GE expr
   25     | expr LE expr
   26     | expr NE expr
   27     | expr EQ expr
   28     | '(' expr ')'

   29 var: IDENT


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 11 12 28
')' (41) 10 11 12 28
'*' (42) 20
'+' (43) 18
'-' (45) 17 19
'/' (47) 21
';' (59) 4 5 6 7 8
'<' (60) 22
'=' (61) 8
'>' (62) 23
'{' (123) 9
'}' (125) 9
error (256)
NUMBER <value> (258) 15
IDENT <var> (259) 29
KWHILE (260) 12
KIF (261) 10 11
KPRINT (262) 6
KELSE (263) 11
KREAD (264) 7
GE (265) 24
LE (266) 25
EQ (267) 27
NE (268) 26
UMINUS (269)


Nonterminals, with rules where they appear

$accept (27)
    on left: 0
session (28)
    on left: 1, on right: 0
stmts (29)
    on left: 2 3, on right: 1 2
stmt <node> (30)
    on left: 4 5 6 7 8 9 10 11 12, on right: 2 10 11 12 13 14
stmt_list <node> (31)
    on left: 13 14, on right: 9 14
expr <node> (32)
    on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28, on right: 5
    6 8 10 11 12 17 18 19 20 21 22 23 24 25 26 27 28
var <node> (33)
    on left: 29, on right: 7 8 16


State 0

    0 $accept: . session $end

    $default  reduce using rule 3 (stmts)

    session  go to state 1
    stmts    go to state 2


State 1

    0 $accept: session . $end

    $end  shift, and go to state 3


State 2

    1 session: stmts .
    2 stmts: stmts . stmt

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    KWHILE  shift, and go to state 6
    KIF     shift, and go to state 7
    KPRINT  shift, and go to state 8
    KREAD   shift, and go to state 9
    '-'     shift, and go to state 10
    ';'     shift, and go to state 11
    '{'     shift, and go to state 12
    '('     shift, and go to state 13

    $default  reduce using rule 1 (session)

    stmt  go to state 14
    expr  go to state 15
    var   go to state 16


State 3

    0 $accept: session $end .

    $default  accept


State 4

   15 expr: NUMBER .

    $default  reduce using rule 15 (expr)


State 5

   29 var: IDENT .

    $default  reduce using rule 29 (var)


State 6

   12 stmt: KWHILE . '(' expr ')' stmt

    '('  shift, and go to state 17


State 7

   10 stmt: KIF . '(' expr ')' stmt
   11     | KIF . '(' expr ')' stmt KELSE stmt

    '('  shift, and go to state 18


State 8

    6 stmt: KPRINT . expr ';'

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 13

    expr  go to state 19
    var   go to state 20


State 9

    7 stmt: KREAD . var ';'

    IDENT  shift, and go to state 5

    var  go to state 21


State 10

   17 expr: '-' . expr

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 13

    expr  go to state 22
    var   go to state 20


State 11

    4 stmt: ';' .

    $default  reduce using rule 4 (stmt)


State 12

    9 stmt: '{' . stmt_list '}'

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    KWHILE  shift, and go to state 6
    KIF     shift, and go to state 7
    KPRINT  shift, and go to state 8
    KREAD   shift, and go to state 9
    '-'     shift, and go to state 10
    ';'     shift, and go to state 11
    '{'     shift, and go to state 12
    '('     shift, and go to state 13

    stmt       go to state 23
    stmt_list  go to state 24
    expr       go to state 15
    var        go to state 16


State 13

   28 expr: '(' . expr ')'

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 13

    expr  go to state 25
    var   go to state 20


State 14

    2 stmts: stmts stmt .

    $default  reduce using rule 2 (stmts)


State 15

    5 stmt: expr . ';'
   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    GE   shift, and go to state 26
    LE   shift, and go to state 27
    EQ   shift, and go to state 28
    NE   shift, and go to state 29
    '>'  shift, and go to state 30
    '<'  shift, and go to state 31
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    ';'  shift, and go to state 36


State 16

    8 stmt: var . '=' expr ';'
   16 expr: var .

    '='  shift, and go to state 37

    $default  reduce using rule 16 (expr)


State 17

   12 stmt: KWHILE '(' . expr ')' stmt

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 13

    expr  go to state 38
    var   go to state 20


State 18

   10 stmt: KIF '(' . expr ')' stmt
   11     | KIF '(' . expr ')' stmt KELSE stmt

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 13

    expr  go to state 39
    var   go to state 20


State 19

    6 stmt: KPRINT expr . ';'
   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    GE   shift, and go to state 26
    LE   shift, and go to state 27
    EQ   shift, and go to state 28
    NE   shift, and go to state 29
    '>'  shift, and go to state 30
    '<'  shift, and go to state 31
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    ';'  shift, and go to state 40


State 20

   16 expr: var .

    $default  reduce using rule 16 (expr)


State 21

    7 stmt: KREAD var . ';'

    ';'  shift, and go to state 41


State 22

   17 expr: '-' expr .
   18     | expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    $default  reduce using rule 17 (expr)


State 23

   13 stmt_list: stmt .

    $default  reduce using rule 13 (stmt_list)


State 24

    9 stmt: '{' stmt_list . '}'
   14 stmt_list: stmt_list . stmt

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    KWHILE  shift, and go to state 6
    KIF     shift, and go to state 7
    KPRINT  shift, and go to state 8
    KREAD   shift, and go to state 9
    '-'     shift, and go to state 10
    ';'     shift, and go to state 11
    '{'     shift, and go to state 12
    '}'     shift, and go to state 42
    '('     shift, and go to state 13

    stmt  go to state 43
    expr  go to state 15
    var   go to state 16


State 25

   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr
   28     | '(' expr . ')'

    GE   shift, and go to state 26
    LE   shift, and go to state 27
    EQ   shift, and go to state 28
    NE   shift, and go to state 29
    '>'  shift, and go to state 30
    '<'  shift, and go to state 31
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    ')'  shift, and go to state 44


State 26

   24 expr: expr GE . expr

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 13

    expr  go to state 45
    var   go to state 20


State 27

   25 expr: expr LE . expr

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 13

    expr  go to state 46
    var   go to state 20


State 28

   27 expr: expr EQ . expr

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 13

    expr  go to state 47
    var   go to state 20


State 29

   26 expr: expr NE . expr

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 13

    expr  go to state 48
    var   go to state 20


State 30

   23 expr: expr '>' . expr

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 13

    expr  go to state 49
    var   go to state 20


State 31

   22 expr: expr '<' . expr

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 13

    expr  go to state 50
    var   go to state 20


State 32

   18 expr: expr '+' . expr

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 13

    expr  go to state 51
    var   go to state 20


State 33

   19 expr: expr '-' . expr

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 13

    expr  go to state 52
    var   go to state 20


State 34

   20 expr: expr '*' . expr

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 13

    expr  go to state 53
    var   go to state 20


State 35

   21 expr: expr '/' . expr

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 13

    expr  go to state 54
    var   go to state 20


State 36

    5 stmt: expr ';' .

    $default  reduce using rule 5 (stmt)


State 37

    8 stmt: var '=' . expr ';'

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    '-'     shift, and go to state 10
    '('     shift, and go to state 13

    expr  go to state 55
    var   go to state 20


State 38

   12 stmt: KWHILE '(' expr . ')' stmt
   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    GE   shift, and go to state 26
    LE   shift, and go to state 27
    EQ   shift, and go to state 28
    NE   shift, and go to state 29
    '>'  shift, and go to state 30
    '<'  shift, and go to state 31
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    ')'  shift, and go to state 56


State 39

   10 stmt: KIF '(' expr . ')' stmt
   11     | KIF '(' expr . ')' stmt KELSE stmt
   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    GE   shift, and go to state 26
    LE   shift, and go to state 27
    EQ   shift, and go to state 28
    NE   shift, and go to state 29
    '>'  shift, and go to state 30
    '<'  shift, and go to state 31
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    ')'  shift, and go to state 57


State 40

    6 stmt: KPRINT expr ';' .

    $default  reduce using rule 6 (stmt)


State 41

    7 stmt: KREAD var ';' .

    $default  reduce using rule 7 (stmt)


State 42

    9 stmt: '{' stmt_list '}' .

    $default  reduce using rule 9 (stmt)


State 43

   14 stmt_list: stmt_list stmt .

    $default  reduce using rule 14 (stmt_list)


State 44

   28 expr: '(' expr ')' .

    $default  reduce using rule 28 (expr)


State 45

   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   24     | expr GE expr .
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 24 (expr)


State 46

   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   25     | expr LE expr .
   26     | expr . NE expr
   27     | expr . EQ expr

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 25 (expr)


State 47

   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr
   27     | expr EQ expr .

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 27 (expr)


State 48

   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   26     | expr NE expr .
   27     | expr . EQ expr

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 26 (expr)


State 49

   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   23     | expr '>' expr .
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 23 (expr)


State 50

   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   22     | expr '<' expr .
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 22 (expr)


State 51

   18 expr: expr . '+' expr
   18     | expr '+' expr .
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 18 (expr)


State 52

   18 expr: expr . '+' expr
   19     | expr . '-' expr
   19     | expr '-' expr .
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    '*'  shift, and go to state 34
    '/'  shift, and go to state 35

    $default  reduce using rule 19 (expr)


State 53

   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   20     | expr '*' expr .
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    $default  reduce using rule 20 (expr)


State 54

   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   21     | expr '/' expr .
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    $default  reduce using rule 21 (expr)


State 55

    8 stmt: var '=' expr . ';'
   18 expr: expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '<' expr
   23     | expr . '>' expr
   24     | expr . GE expr
   25     | expr . LE expr
   26     | expr . NE expr
   27     | expr . EQ expr

    GE   shift, and go to state 26
    LE   shift, and go to state 27
    EQ   shift, and go to state 28
    NE   shift, and go to state 29
    '>'  shift, and go to state 30
    '<'  shift, and go to state 31
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    ';'  shift, and go to state 58


State 56

   12 stmt: KWHILE '(' expr ')' . stmt

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    KWHILE  shift, and go to state 6
    KIF     shift, and go to state 7
    KPRINT  shift, and go to state 8
    KREAD   shift, and go to state 9
    '-'     shift, and go to state 10
    ';'     shift, and go to state 11
    '{'     shift, and go to state 12
    '('     shift, and go to state 13

    stmt  go to state 59
    expr  go to state 15
    var   go to state 16


State 57

   10 stmt: KIF '(' expr ')' . stmt
   11     | KIF '(' expr ')' . stmt KELSE stmt

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    KWHILE  shift, and go to state 6
    KIF     shift, and go to state 7
    KPRINT  shift, and go to state 8
    KREAD   shift, and go to state 9
    '-'     shift, and go to state 10
    ';'     shift, and go to state 11
    '{'     shift, and go to state 12
    '('     shift, and go to state 13

    stmt  go to state 60
    expr  go to state 15
    var   go to state 16


State 58

    8 stmt: var '=' expr ';' .

    $default  reduce using rule 8 (stmt)


State 59

   12 stmt: KWHILE '(' expr ')' stmt .

    $default  reduce using rule 12 (stmt)


State 60

   10 stmt: KIF '(' expr ')' stmt .
   11     | KIF '(' expr ')' stmt . KELSE stmt

    KELSE  shift, and go to state 61

    KELSE     [reduce using rule 10 (stmt)]
    $default  reduce using rule 10 (stmt)


State 61

   11 stmt: KIF '(' expr ')' stmt KELSE . stmt

    NUMBER  shift, and go to state 4
    IDENT   shift, and go to state 5
    KWHILE  shift, and go to state 6
    KIF     shift, and go to state 7
    KPRINT  shift, and go to state 8
    KREAD   shift, and go to state 9
    '-'     shift, and go to state 10
    ';'     shift, and go to state 11
    '{'     shift, and go to state 12
    '('     shift, and go to state 13

    stmt  go to state 62
    expr  go to state 15
    var   go to state 16


State 62

   11 stmt: KIF '(' expr ')' stmt KELSE stmt .

    $default  reduce using rule 11 (stmt)
